# internship-zoho

week1/: day1.md  day2.md  day3.md  day4.md
week2/: day1.md  day2.md  day3.md  day4.md  day5.md  day6.md
week2/code/: aggrigate.py  cal.py  mypy.ini  mypy_demo.py  pyproject.toml
week2/code/Streamlit_stock_history_tacker/: stock_price_tracking.py
week2/code/Streamlit_stock_history_tacker/ticker/: .~lock.Yahoo Ticker Symbols - September 2017.xlsx#
week2/code/numpy-practice/: numpy_demo.py
week2/code/pandas-practice/: pandas-basics.ipynb  pandas_series_df.ipynb
week2/code/pandas-practice/data/: nifty_data.csv
week2/code/tests/: conftest.py  test_1.py  test_divisbility.py  test_report.html  test_tmp_path.py  test_web.py
week3/: day1.md
week3/code/: df_streamlit.py  json_demo.py  json_pandas.py  sample_file.json  sample_file.jsonl
week3/code/task/: app.py  cer_wer_analysis.py  requirements.txt
week4/: day1.md  day2.md  day3.md  day4.md  day5.md  day6.md  sa.py
week4/code/probelm-set-2(loops)/: camel.py  coke.py  nutrition.py  plates.py  twttr.py
week4/code/problem-set-0(functions)/: einstein.py  faces.py  indoor.py  playback.py  tip.py
week4/code/problem-set-1(conditionals)/: bank.py  deep.py  extensions.py  interpreter.py  meal.py
week4/code/problem-set-3(exceptions)/: fuel.py  grocery.py  outdated.py  taqueria.py
week4/code/problem-set-4(libraries)/: emojize.py  figlet.py
week6/search_audio/: .gitignore  .pylintrc  add_audio_data.py  app.py  connection.py  constants.py  elastic_search_utils.py  generate.py  readme.md  utils.py
(+9 files in other folders)
